sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
var i= 0
var j=0
def bubbleSort2() {
for(i<getNombreValeurs()-2 to 0 by -1){
	for(j<-0 to i){
		if(plusPetit(j:Int,j+1:Int)){
			echange(j+1,j)
		}
	}
}
}
